<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/constraintLayoutHome"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="50sp"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:paddingTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/developer_names"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/start_button_text"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="onclickButtonStart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/scores_title"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="onclickButtonScores"/>

</LinearLayout>