<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/constraintLayoutHome"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_weight="3"
        android:paddingTop="10dp"
        android:text="@string/scores_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorWhite"
        android:textSize= "20sp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/highScoreLabel2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize= "20sp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_margin="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/highScoreLabel3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorWhite"
        android:textSize= "20sp"
        android:gravity="center"
        android:layout_margin="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/highScoreLabel4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorWhite"
        android:textSize= "20sp"
        android:gravity="center"
        android:layout_margin="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/highScoreLabel5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorWhite"
        android:textSize= "20sp"
        android:gravity="center"
        android:layout_margin="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclickTryAgain"
            android:text="@string/popup_button_play"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_button_home"
            android:onClick="onclickButtonMain"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/developer_names"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"/>

</LinearLayout>